# YOLOv8_TensorRT_CUDA_DeepSort

./: .gitignore  README.md
Docker/: Dockerfile.opencv  Dockerfile.yolo  requirements_opencv.txt  requirements_yolo.txt
convert_onnx_to_engine_cpp/: CMakeLists.txt  README.md  engine.cpp  engine.h  main.cpp  util.h  util.inl
object_tracking/: CMakeLists.txt  README.md  main.cpp
object_tracking/include/: cuda_deleter.h  detection_gpu.h  detection_infer.h  detector.h  engine.h  extractor.h  statistics.h  tic_toc.h  timer.h  util.h
object_tracking/lib/cuda_kernels/: CMakeLists.txt
object_tracking/lib/cuda_kernels/include/: cuda_kernel.h
object_tracking/lib/cuda_kernels/src/: blob_normalize.cu  cvtColorBGR2BGRA.cu  cvtColorBGR2RGB.cu  findMaxAndIndex.cu  getKeepIndex.cu  imageCrop.cu  imageScaling.cu  matrixTranspose.cu  nms.cu  recoverScaleAndScoreThresholding.cu
object_tracking/lib/sort/: CMakeLists.txt
object_tracking/lib/sort/include/: detection.h  detection_sort.h  detector.h  hungarian.h  iou_matching.h  kalman_filter.h  linear_assignment.h  nn_matching.h  track.h  tracker.h
object_tracking/lib/sort/src/: detector.cpp  hungarian.cpp  iou_matching.cpp  kalman_filter.cpp  linear_assignment.cpp  nn_matching.cpp  test_detector.cpp  track.cpp  tracker.cpp
object_tracking/result/: visualize.py
object_tracking/src/: detector.cpp  engine.cpp  extractor.cpp
reid/: README.md  conver_reid_to_onnx.py  model.py  pred.py  prepare_market1501.py  read_category_dataset.py  train.py
yolov8/: export.py  pred.py
